modules/gdscript/tests/scripts/analyzer/errors/construct_abstract_class.gd
extends RefCounted

@abstract
class A:
	pass

func test():
	var _a := A.new()
